[project]
name = "driver-override"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "nbconvert>=7.17.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "py7zr>=1.1.2",
    "pyarrow>=23.0.0",
]
