[project]
name = "driver-override"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg>=1.4",
    "hdbscan>=0.8.41",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "py7zr>=1.1.2",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.11",
]
